--- a/100_Certification_challenge/pyproject.toml
+++ b/100_Certification_challenge/pyproject.toml
@@ -45,6 +45,11 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "nltk>=3.8.0",
     "textstat>=0.7.0",
+    "langchain-cohere>=0.1.0",
+    "cohere>=4.0.0",
+    "langchain-qdrant>=0.1.0",
+    "rank-bm25>=0.2.2",
+    "streamlit>=1.47.1",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
